# psrpcore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  examples.md  getting_started.md  index.md  index.rst  installation.md  make.bat  minishell.md  protocol.md  psrp.md  psrpcore.md  psrpcore.types.md  scenarios.md  transport.md  types.md
docs/_static/: ConvertTo-PythonClass.ps1
docs/source/: modules.md  psrpcore.md  psrpcore.types.md
psrpcore/: __init__.py  _base.py  _client.py  _command.py  _crypto.py  _events.py  _exceptions.py  _host.py  _payload.py  _pipeline.py  _runspace.py  _serializer.py  _server.py
psrpcore/types/: __init__.py  _base.py  _collection.py  _complex.py  _complex_types.py  _enum.py  _host.py  _primitive.py  _primitive_types.py  _ps_base.py  _psrp.py  _psrp_messages.py  _serializer.py
src/psrpcore/: __init__.py  _base.py  _client.py  _clixml_shell.py  _command.py  _crypto.py  _events.py  _host.py  _payload.py  _pipeline.py  _server.py
src/psrpcore/types/: __init__.py  _base.py  _collection.py  _complex.py  _enum.py  _host.py  _primitive.py  _psrp.py  _serializer.py
tests/: clixml_shell_runner.py  conftest.py  test_base.py  test_client.py  test_clixml_proc.py  test_clixml_shell.py  test_command.py  test_crypto.py  test_events.py  test_exceptions.py  test_host_call.py  test_integration_client.py  test_integration_server.py  test_payload.py  test_pipeline.py  test_runspace.py  test_serializer.py  test_server.py
tests/test_types/: test_collection.py  test_complex.py  test_enum.py  test_host.py  test_primitive.py  test_psrp.py  test_serialize_clixml.py  test_serializer.py
tests/types/: test_base.py  test_collection.py  test_complex.py  test_complex_types.py  test_enum.py  test_primitive.py  test_primitive_types.py  test_ps_base.py  test_psrp.py  test_psrp_messages.py  test_serializer.py
