[metadata]
name = psrpcore
version = 0.1.2
url = https://github.com/jborean93/psrpcore
project_urls =
    Documentation = https://psrpcore.readthedocs.io/
author = Jordan Borean
author_email = jborean93@gmail.com
license = MIT
license_files = LICENSE
description = Core components for the PowerShell Remoting Protocol
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    psrp
    pwsh
    powershell
    remoting
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    cryptography

[options.packages.find]
where = src

[options.package_data]
psrpcore = py.typed
